[package]
name = "waserv"
version = "0.1.4"
authors = ["mehmetcansahin <sahinmcan@gmail.com>"]
description = "waserv"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/waserv"
repository = "https://github.com/mehmetcansahin/waserv"
keywords = ["web", "worker"]
categories = ["web-programming"]
edition = "2018"

[dependencies]
web-sys = { version = "0.3", features = ["ExtendableEvent", "Request", "RequestInit", "Response", "ResponseInit", "Headers", "Url"] }
path-tree = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"